# IQtools

./: IQtools.py  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: distribute.yml  styleCheck.yml
IQtools/: CLI.py  SignalAnalyzer.py
Writerside/: iqhelp.tree  writerside.cfg
Writerside/topics/: starter-topic.md
