[tool.poetry]
name = "iqtools"
version = "0.1.0"
description = ""
authors = ["Logan <logan@sige.dev>"]
readme = "README.md"
packages = [{include = "IQtools"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
numpy = "^1.26.4"
scipy = "^1.12.0"
matplotlib = "^3.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
